--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -115,7 +115,7 @@ a.modal-tooltip {
     }
 
     &:where(:not(:last-child, .cell-title, .card__title, .post__title)) {
-      margin-bottom: var(--heading-margin-bottom, min(max(1.25rem, var(--paragraph-spacing) - 0.75rem), 2rem));
+      margin-bottom: var(--heading-margin-bottom, min(max(0.75rem, var(--paragraph-spacing) - 0.75rem), 2rem));
     }
   }
 
@@ -296,7 +296,7 @@ a.modal-tooltip {
 .content-section {
   :where(.list, .block-list, .wp-block-footnotes, .litrpg-body :where(ul, ol)) {
     list-style: initial;
-    padding-left: 1.75rem;
+    padding-left: 1.85em;
     margin: 1.5rem 0 0;
 
     &:not(:last-child) {
@@ -305,7 +305,7 @@ a.modal-tooltip {
 
     > li {
       &:not(:last-child) {
-        margin-bottom: .75rem;
+        margin-bottom: .75em;
       }
 
       > :is(ul, ol) {
