--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -260,6 +260,10 @@
   &::backdrop {
     background: var(--modal-overlay);
   }
+
+  &._chapter-index {
+    --modal-width: 400px;
+  }
 }
 
 .modal {
