Fix fullscreen page padding
One would assume CSS is smart enough to handle a "0" instead of "0px" but apparently not. Not like both mean the same or something.

--- a/src/scss/common/_fullscreen.scss
+++ b/src/scss/common/_fullscreen.scss
@@ -1,5 +1,5 @@
 :is(:fullscreen, :-webkit-full-screen) {
-  --page-inset-top: 0;
+  --page-inset-top: 0px;
 
   .background-texture {
     background: {
