--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -208,7 +208,7 @@
   padding: 0;
   border: none;
   border-radius: min(20px, var(--layout-border-radius-large));
-  max-height: calc(100% - 20px);
+  max-height: calc(100% - 32px);
   width: var(--modal-width, 300px);
   max-width: calc(100vw - 20px);
   box-shadow: var(--modal-box-shadow, var(--box-shadow-xl));
@@ -263,7 +263,7 @@
 
   &._chapter-index {
     --modal-width: 400px;
-    max-height: 600px;
+    max-height: min(calc(100% - 32px), 600px);
   }
 }
 
