--- a/src/scss/_chapter.scss
+++ b/src/scss/_chapter.scss
@@ -437,7 +437,11 @@
     border-radius: var(--layout-border-radius-small);
 
     :is(a, a[href]) {
-      padding: 6px 8px 6px 0;
+      padding: 6px 8px;
+    }
+
+    :is(i, .icon, .text-icon) {
+      margin-left: -6px;
     }
 
     &.current {
