--- a/src/scss/splide.scss
+++ b/src/scss/splide.scss
@@ -7,8 +7,10 @@
 
 .splide {
   --this-arrow-size: #{get_clamp(20, 40, 320, 640)};
-  width: 100%;
+  --this-outset: 6px;
+  width: calc(100% + 2 * var(--this-outset));
   max-width: 100vw;
+  transform: translateX(calc(-1 * var(--this-outset)));
   padding-top: var(--this-arrow-vertical-padding, 0px);
   padding-left: calc(var(--this-arrow-horizontal-padding, 0px));
   padding-bottom: var(--this-arrow-vertical-padding, 0px);
@@ -24,6 +26,8 @@
   }
 
   &:is(.splide--ttb, ._list) {
+    --this-outset: 0px;
+
     .splide__slide {
       height: auto !important;
     }
@@ -34,7 +38,7 @@
   }
 
   &:has(.splide__pagination) {
-    --this-arrow-offset: 16px; // Offset bottom pagination
+    --this-arrow-offset: 9px; // Offset bottom pagination
   }
 
   &:has(.splide__arrows) {
@@ -56,7 +60,7 @@
   }
 
   &__track {
-    padding: 0 0 var(--this-pagination-vertical-padding, 16px) !important;
+    padding: var(--this-outset) var(--this-outset) var(--this-pagination-vertical-padding, 16px) !important;
   }
 
   &.article-card-block.is-overflow .splide__track {
