--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -325,7 +325,7 @@
       margin-top: 0;
     }
 
-    button:is([data-action=sticky], [data-action=approve], [data-action=unapprove]) {
+    button:is([data-action=sticky], [data-action=approve], [data-action=unapprove], [data-action=offensive], [data-action=appropriate]) {
       display: none;
     }
   }
@@ -358,6 +358,18 @@
 
   &:not(._unapproved) > .fictioneer-comment__container {
     :is([data-action=approve], .moderation-note-unapproved) {
+      display: none;
+    }
+  }
+
+  &._offensive > .fictioneer-comment__container {
+    [data-action=offensive] {
+      display: none;
+    }
+  }
+
+  &:not(._offensive) > .fictioneer-comment__container {
+    :is([data-action=appropriate], .moderation-note-offensive) {
       display: none;
     }
   }
