--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -70,6 +70,12 @@
       }
     }
 
+    &._invalid {
+      input:invalid {
+        --input-validation-shadow: inset 0 0 0 2px var(--red-500);
+      }
+    }
+
     textarea {
       display: block;
       background: transparent;
@@ -87,7 +93,7 @@
       background: var(--input-background);
       border-radius: var(--layout-border-radius-small);
       transition: filter var(--transition-duration); // AJAX
-      box-shadow: var(--input-shadow);
+      box-shadow: var(--input-shadow, 0 0 transparent), var(--input-validation-shadow, 0 0 transparent);
     }
 
     .notice {
