--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -164,9 +164,10 @@
 
   // === FOCUS =================================================================
 
-  --in-focus-border-color: var(--red-500);
-  // --in-focus-outline: 2px solid var(--in-focus-border-color);
-  --in-focus-box-shadow: inset 0 0 0 2px rgb(255 255 255 / 75%);
+  // --in-focus-color: white;
+  // --in-focus-outline: none;
+  --in-focus-background: #5593f6;
+  // --in-focus-box-shadow: 0 0 0 3px var(--in-focus-background);
 
   // === NAVIGATION ============================================================
 
