--- a/src/scss/common/_tabs.scss
+++ b/src/scss/common/_tabs.scss
@@ -8,7 +8,6 @@
   }
 
   &__item {
-    --focus-offset: -2px;
     background: var(--tab-background);
     color: var(--tab-color);
     font-size: var(--fs-dxs);
@@ -28,7 +27,7 @@
     }
 
     &:focus-visible {
-      box-shadow: var(--in-focus-box-shadow);
+      box-shadow: var(--in-focus-box-shadow-override, none) !important;
     }
 
     &._current {
