Fix select tab focus style

--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -45,7 +45,8 @@ a:focus-visible img,
   box-shadow: var(--in-focus-box-shadow);
 }
 
-*:not(.checkmark):focus-visible {
+*:not(.checkmark, select):focus-visible,
+.user-is-tabbing select:focus-visible {
   color: var(--in-focus-color) !important;
 }
 
