--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -247,7 +247,7 @@
   line-height: 1;
   text-shadow: none;
   padding: 7px 12px;
-  border-radius: 5px;
+  border-radius: 0 5px 0 5px;
   transition: color var(--transition-duration);
 
   &:hover {
